# financial_monitor

./: .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: ci.yml
migrations/: 20260712101949_create_transactions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  transactions.rs
tests/: health_chek.rs
