[package]
name = "financial_monitor"
version = "0.1.0"
edition = "2024"
authors = ["NikitkaNos"]
description = "TODO"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "financial_monitor"

[dependencies]
actix-web = "4.14.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6"
config = "0.15.25"
chrono = "0.4.45"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.13.4"
color-eyre = "0.6"
